# uni-fly

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  uni-fly-plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-please.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260508_0001_initial.py
docs/: architecture.md  getting-started.md  index.md
docs/development/: contributing.md  layout.md
docs/reference/: db.md  firefly-client.md  worker.md
scripts/: apply_branch_protections.sh  bump_cutoff.py
